[gd_scene load_steps=16 format=3 uid="uid://1ry85xqrtjd3"]

[ext_resource type="Script" uid="uid://cuqvtw5gpc55k" path="res://scripts/UI/setting.gd" id="1_kq500"]
[ext_resource type="Texture2D" uid="uid://cyk7oraywdkgj" path="res://resources/images/backgrounds/settingbackground.png" id="2_hqymk"]
[ext_resource type="Script" uid="uid://cvpo88lsv4uxc" path="res://scripts/UI/ButtonAction.gd" id="3_q4yat"]
[ext_resource type="Script" uid="uid://b4wukebhqcyfu" path="res://scripts/UI/setting/video_setting.gd" id="4_jo7xi"]
[ext_resource type="Script" uid="uid://sdjcnxccvfe" path="res://scripts/UI/setting/audio_setting.gd" id="5_nl25k"]
[ext_resource type="AudioStream" uid="uid://bkkqc35v4lfmk" path="res://resources/sounds/buttons/button-305770.mp3" id="6_q5xb5"]
[ext_resource type="AudioStream" uid="uid://bvslftlpc5wj3" path="res://resources/sounds/buttons/button-click-289742.mp3" id="7_oemk0"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kq500"]
color = Color(1, 1, 1, 1)
grow_begin = -5.0
grow_end = -5.0
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_hqymk"]
color = Color(0.13662, 0.372034, 1, 1)
grow_begin = -2.0
grow_end = 5.0
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_31ui4"]
color = Color(1, 1, 1, 1)
grow_begin = -5.0
grow_end = -5.0
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_scrng"]
color = Color(0.0555849, 0.539981, 1, 1)
grow_begin = -2.0
grow_end = 5.0
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_q4yat"]
color = Color(1, 1, 1, 1)
grow_begin = -5.0
grow_end = -5.0
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jo7xi"]
color = Color(0.054902, 0.541176, 1, 1)
grow_begin = -2.0
grow_end = 5.0
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nl25k"]
color = Color(1, 1, 1, 1)
grow_begin = -5.0
grow_end = -5.0
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_q5xb5"]
color = Color(0.054902, 0.541176, 1, 1)
grow_begin = -2.0
grow_end = 5.0
thickness = 10

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kq500")

[node name="SettingBackground" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hqymk")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 38

[node name="LeaveButton" type="Button" parent="SettingBackground/VBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 8
text = "Leave"

[node name="LeaveAction" type="Node" parent="SettingBackground/VBoxContainer"]
script = ExtResource("3_q4yat")
button_path = NodePath("../LeaveButton")

[node name="HBoxContainer" type="HBoxContainer" parent="SettingBackground/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 520

[node name="seperator" type="Control" parent="SettingBackground/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingBackground/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="VideoButton" type="Button" parent="SettingBackground/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Video"

[node name="AudioButton" type="Button" parent="SettingBackground/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Audio"

[node name="MISCButton" type="Button" parent="SettingBackground/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "MISC"

[node name="VideoAction" type="Node" parent="SettingBackground/VBoxContainer/HBoxContainer/HBoxContainer"]
script = ExtResource("3_q4yat")
button_path = NodePath("../VideoButton")

[node name="AudioAction" type="Node" parent="SettingBackground/VBoxContainer/HBoxContainer/HBoxContainer"]
script = ExtResource("3_q4yat")
button_path = NodePath("../AudioButton")

[node name="GraphAction" type="Node" parent="SettingBackground/VBoxContainer/HBoxContainer/HBoxContainer"]
script = ExtResource("3_q4yat")

[node name="MISCAction" type="Node" parent="SettingBackground/VBoxContainer/HBoxContainer/HBoxContainer"]
script = ExtResource("3_q4yat")
button_path = NodePath("../MISCButton")

[node name="VideoSetting" type="HBoxContainer" parent="SettingBackground/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 220
script = ExtResource("4_jo7xi")

[node name="seperator" type="Control" parent="SettingBackground/VBoxContainer/VideoSetting"]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="SettingBackground/VBoxContainer/VideoSetting"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Resolution" type="Label" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_horizontal = 0
item_count = 3
popup/item_0/text = "1280*720"
popup/item_0/id = 0
popup/item_1/text = "1600*900"
popup/item_1/id = 1
popup/item_2/text = "1920*1080"
popup/item_2/id = 2

[node name="seperator" type="Control" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
layout_mode = 2

[node name="ScreenMode" type="Label" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Screen Mode"

[node name="ScreenModeOption" type="OptionButton" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
item_count = 4
popup/item_0/text = "FullScreen"
popup/item_0/id = 0
popup/item_1/text = "WindowMode"
popup/item_1/id = 1
popup/item_2/text = "Bordless-WindowMode"
popup/item_2/id = 2
popup/item_3/text = "Bordless-FullScreen"
popup/item_3/id = 3

[node name="seperator2" type="Control" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
layout_mode = 2

[node name="V-SyncCheck" type="CheckButton" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "V-Sync Mode"

[node name="seperator3" type="Control" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
layout_mode = 2

[node name="FramerateLimit" type="Label" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Framerate Limit"

[node name="FramerateLimitOption" type="OptionButton" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
item_count = 6
popup/item_0/text = "30 FPS"
popup/item_0/id = 0
popup/item_1/text = "60 FPS"
popup/item_1/id = 1
popup/item_2/text = "144 FPS"
popup/item_2/id = 2
popup/item_3/text = "165 FPS"
popup/item_3/id = 3
popup/item_4/text = "240 FPS"
popup/item_4/id = 4
popup/item_5/text = "Unlimited"
popup/item_5/id = 5

[node name="seperator4" type="Control" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
layout_mode = 2

[node name="Brightness" type="Label" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingBackground/VBoxContainer/VideoSetting/Container"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_kq500")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_hqymk")
max_value = 1.0
step = 0.01

[node name="AudioSetting" type="HBoxContainer" parent="SettingBackground/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 215
script = ExtResource("5_nl25k")

[node name="Control" type="Control" parent="SettingBackground/VBoxContainer/AudioSetting"]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="SettingBackground/VBoxContainer/AudioSetting"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MasterVolume" type="Label" parent="SettingBackground/VBoxContainer/AudioSetting/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="MasterVolumeBar" type="HSlider" parent="SettingBackground/VBoxContainer/AudioSetting/Container"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_31ui4")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_scrng")
max_value = 1.0
step = 0.01

[node name="seperator" type="Control" parent="SettingBackground/VBoxContainer/AudioSetting/Container"]
layout_mode = 2

[node name="MusicVolume" type="Label" parent="SettingBackground/VBoxContainer/AudioSetting/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="MusicVolumeBar" type="HSlider" parent="SettingBackground/VBoxContainer/AudioSetting/Container"]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_q4yat")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_jo7xi")
max_value = 1.0
step = 0.01

[node name="seperator2" type="Control" parent="SettingBackground/VBoxContainer/AudioSetting/Container"]
layout_mode = 2

[node name="EffectVolume" type="Label" parent="SettingBackground/VBoxContainer/AudioSetting/Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="EffectVolumeBar" type="HSlider" parent="SettingBackground/VBoxContainer/AudioSetting/Container"]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_nl25k")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_q5xb5")
max_value = 1.0
step = 0.01

[node name="GraphSetting" type="HBoxContainer" parent="SettingBackground/VBoxContainer"]
layout_mode = 2

[node name="MiscSetting" type="HBoxContainer" parent="SettingBackground/VBoxContainer"]
layout_mode = 2

[node name="ButtonEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_q5xb5")

[node name="SelectEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_oemk0")
